tests/errors/not_equatable_err/not_equatable_err.c
#error not_equatable_err.not_equatable_err:7:40 Equality is not defined for type: obj
#error not_equatable_err.not_equatable_err:9:36 Equality is not defined for type: unit -> int
#error not_equatable_err.not_equatable_err:11:54 Equality is not defined for type: (obj * int)
#error not_equatable_err.not_equatable_err:15:54 Equality is not defined for type: UnionWithFun
#error not_equatable_err.not_equatable_err:19:48 Equality is not defined for type: GU<unit -> int>
#error not_equatable_err.not_equatable_err:23:66 Equality is not defined for type: MyNode<unit -> int>
#error not_equatable_err.not_equatable_err:29:13 Equality is not defined for type: RecordWithFun
